# captchakit

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  index.html  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
adapters/aiogram/: index.html
adapters/discord/: index.html
adapters/django/: index.html
adapters/fastapi/: index.html
api/: index.html
audio/: index.html
benchmarks/: bench.py
docs/: api.md  audio.md  i18n.md  index.md  metrics.md  quickstart.md  ratelimit.md  renderers.md  stability.md  storage.md  themes.md
docs/adapters/: aiogram.md  discord.md  django.md  fastapi.md
examples/: fastapi_login.py
i18n/: index.html
metrics/: index.html
quickstart/: index.html
ratelimit/: index.html
renderers/: index.html
scripts/: render_showcase.py
search/: search_index.json
src/captchakit/: __init__.py  errors.py  i18n.py  manager.py  metrics.py  metrics_prometheus.py  ratelimit.py  ratelimit_redis.py
src/captchakit/adapters/: __init__.py  aiogram.py  discord.py  django.py  fastapi.py
src/captchakit/challenges/: __init__.py  base.py  grid.py  math.py  text.py  word.py
src/captchakit/renderers/: __init__.py  audio.py  base.py  image.py  svg.py  theme.py
src/captchakit/storage/: __init__.py  base.py  memory.py  postgres.py  redis.py
src/pycaptcha/: __init__.py  _clock.py  errors.py  manager.py
src/pycaptcha/adapters/: fastapi.py
src/pycaptcha/challenges/: __init__.py  base.py  math.py  text.py
src/pycaptcha/renderers/: __init__.py  base.py  image.py
src/pycaptcha/storage/: __init__.py  base.py  memory.py
stability/: index.html
storage/: index.html
tests/: conftest.py  test_aiogram_adapter.py  test_audio_renderer.py  test_challenges.py  test_discord_adapter.py  test_django_adapter.py  test_errors.py  test_fastapi_adapter.py  test_grid_challenge.py  test_i18n.py  test_manager.py  test_metrics.py  test_ratelimit.py  test_renderer.py  test_storage.py  test_storage_postgres.py  test_storage_redis.py  test_svg_renderer.py  test_theme.py  test_word_challenge.py
themes/: index.html
