[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "captchakit"
version = "0.5.0"
description = "Async-first, fully type-hinted, minimal captcha library with adapters for aiogram, FastAPI and Discord."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "akerem16", email = "pypi@kerempy.com.tr" }]
keywords = ["captcha", "async", "asyncio", "aiogram", "fastapi", "discord", "bot", "verification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "Pillow>=10.0,<13",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.110", "python-multipart>=0.0.9"]
aiogram = ["aiogram>=3.4"]
discord = ["discord.py>=2.3"]
redis = ["redis>=5.0"]
metrics = ["prometheus-client>=0.20"]
postgres = ["asyncpg>=0.29"]
django = ["django>=4.2", "asgiref>=3.7"]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "httpx>=0.27",
    "fastapi>=0.110",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30",
    "fakeredis>=2.23",
    "aiogram>=3.4",
    "redis>=5.0",
    "prometheus-client>=0.20",
    "asyncpg>=0.29",
    "django>=4.2",
    "asgiref>=3.7",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.urls]
Homepage = "https://github.com/akerem16/captchakit"
Repository = "https://github.com/akerem16/captchakit"
Issues = "https://github.com/akerem16/captchakit/issues"
Changelog = "https://github.com/akerem16/captchakit/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/captchakit"]

[tool.hatch.build.targets.sdist]
include = [
    "src/captchakit",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "ROADMAP.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "N", "SIM", "RUF",
    "ANN", "ASYNC", "S", "PT", "RET", "ARG", "PTH", "TCH", "PL",
]
ignore = [
    "ANN401",   # typing.Any — Protocol yüzeylerinde kaçınılmaz
    "PLR0913",  # çok argümanlı init'ler — CaptchaManager
    "S311",     # random — decoratif amaçlı; solution secrets ile
    "N818",     # public exception isimleri "Error" suffix olmadan (tercih)
    "TC001",    # from __future__ import annotations zaten lazy eval ediyor
    "TC002",
    "TC003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN", "PLR2004", "ARG", "PT011", "PT018", "S106"]
"examples/**" = ["ANN", "S", "T20"]
"src/captchakit/storage/postgres.py" = ["S608"]  # table name is developer-controlled config, not user input

[tool.ruff.lint.isort]
known-first-party = ["captchakit"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
pretty = true
show_error_codes = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_decorators = false
disable_error_code = ["no-untyped-def"]

[[tool.mypy.overrides]]
module = ["django.*", "asyncpg.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["captchakit"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
